feat(feature/article): replace get(0) by getFirst()